deploy/prod/envoy.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: GatewayClass
metadata:
  name: envoy
spec:
  controllerName: gateway.envoyproxy.io/gatewayclass-controller
  parametersRef:
    group: gateway.envoyproxy.io
    kind: EnvoyProxy
    name: valkey
    namespace: valkey-system
---
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: valkey
  namespace: valkey-system
spec:
  gatewayClassName: envoy
  listeners:
    - name: valkey-bootstrap
      protocol: TLS
      port: 41379
      tls:
        mode: Terminate
        certificateRefs:
          - kind: Secret
            name: valkey-wildcard-tls
      allowedRoutes:
        namespaces:
          from: Selector
          selector:
            matchLabels:
              managed-valkey.h3llo-demo.com/instance: bootstrap
